modified UI and working on error

--- a/views/course/show.ejs
+++ b/views/course/show.ejs
@@ -39,12 +39,18 @@
       <div class="card-content-details">
         <h4>This curse includes:</h4>
         <ul>
-          <li>1 Hour on demand lectures</li>
-          <li>Practice exams</li>
-          <li>Labs with passing marks</li>
-          <li>Theory and practical examples</li>
-          <li>Articles</li>
-          <li>Research pappers</li>
+          <li>
+            <img src="/assets/play-icon.svg" alt="" /> 1 Hour on demand lectures
+          </li>
+          <li><img src="/assets/exams.svg" alt="" /> Practice exams</li>
+          <li>
+            <img src="/assets/clipboard.svg" alt="" /> Labs with passing marks
+          </li>
+          <li>
+            <img src="/assets/ppt.svg" alt="" /> Theory and practical examples
+          </li>
+          <li><img src="/assets/ppt.svg" alt="" /> Articles</li>
+          <li><img src="/assets/doc.svg" alt="" /> Research pappers</li>
         </ul>
         <div class="social-options">
           <h5 class="share">Share</h5>
