--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -15,7 +15,7 @@
 >
   <%= error %>
   <button class="alert-close-btn closing-banner-btn">
-    <img src="/assets/alert-cross.svg" alt="" />
+    <img src="/assets/alert-cross.svg" class="light-alert-cross" />
   </button>
 </div>
 <% } %>
