--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -15,7 +15,12 @@
       Top comapnies chose <span class="colored">Future Academy</span> to build
       in demand currer skills
     </h3>
-    <div class="companies-comapny"></div>
+    <div class="companies-comapny">
+      <img src="/assets/company-1.svg" class="company-logos" />
+      <img src="/assets/company-2.svg" class="company-logos" />
+      <img src="/assets/company-4.svg" class="company-logos" />
+      <img src="/assets/company-5.svg" class="company-logos" />
+    </div>
   </div>
   <div class="links">
     <div class="service-links footer-link">
@@ -41,7 +46,7 @@
   </div>
 
   <div class="footer-brand-logo">
-    <img src="/assets/logo.png" alt="" />
+    <img src="/assets/dark-brand-logo.svg" alt="" />
     <h2>Future Academy</h2>
   </div>
 </div>
