--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ img {
 
 /* Nav-bar */
 .nav-bar {
-  height: 12dvh;
+  height: 11dvh;
   width: 100vw;
   background-color: #ffffff;
   display: flex;
@@ -68,22 +68,45 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* background-color: #333333; */
 }
 
 .nav-bar .icons img {
   object-fit: cover;
   object-position: center;
-  height: 80%;
+  height: 50%;
+}
+
+.nav-icons {
+  object-fit: cover;
+  object-position: center;
+  height: 50%;
+  width: 55%;
+}
+
+.nav-bar .search {
+  width: 28rem;
+  height: 65%;
+  position: relative;
+  display: flex;
 }
 
 .nav-bar .search-bar {
-  width: 25rem;
-  height: 65%;
+  width: 100%;
+  height: 100%;
   border-radius: 7.5rem;
-  border: 2px solid #000;
+  border: 1px solid #000;
   padding: 0 0 0 5rem;
   font-size: 1.08rem;
-  background-color: #f3f3f3c3;
+  background-color: #f6f6f693;
+}
+
+.search .search-icon {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translate(-50%, -50%);
+  height: 80%;
 }
 
 .nav-bar .brand-logo {
@@ -125,6 +148,19 @@ img {
   padding: 0.5rem 4rem 0;
 }
 
+.companies-comapny {
+  width: 45%;
+  height: 100%;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.companies-comapny img {
+  height: 70%;
+  width: 20%;
+}
+
 .footer .links {
   display: flex;
   padding: 1rem 4rem 0 4rem;
@@ -154,10 +190,16 @@ img {
 }
 
 .footer-brand-logo {
-  height: 5.5rem;
+  height: 3rem;
   padding: 1rem 0 0 4rem;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
+  margin-top: 2.5rem;
+  gap: 2rem;
+}
+.footer-brand-logo img {
+  height: 100%;
 }
 
 .footer-brand-logo h2 {
@@ -176,15 +218,17 @@ img {
 .hero-section {
   height: 60dvh;
   width: 100%;
-  background-color: #efefef;
+  background-color: #f8f9fb;
   position: relative;
 }
 
 .hero-section img {
   object-fit: cover;
   object-position: center;
-  width: 100%;
+  width: 80%;
   height: 100%;
+  position: relative;
+  right: -20%;
 }
 
 .hero-section .card {
@@ -502,7 +546,7 @@ img {
 /* Flash-alerts */
 
 .alerts {
-  height: 4rem;
+  min-height: 4rem;
   max-width: 60%;
   margin: auto;
   border: 1px solid blue;
@@ -513,14 +557,15 @@ img {
   justify-content: space-between;
   align-items: center;
   /* position: absolute;
-  top: 10%;
-  left: 50%; */
-  /* transform: translate(-50%, 0); */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0); */
   transition: all 2s ease-out 0.5;
+  margin-bottom: 1rem;
 }
 
 .alerts .alert-success {
-  background-color: #333333;
+  background-color: #40a8e9;
 }
 
 .alerts .alert-error {
@@ -528,9 +573,19 @@ img {
 }
 
 .alert-close-btn {
-  background-color: transparent;
   border: none;
+  height: 1.75rem;
+  min-width: 4rem;
+  mix-blend-mode: color-burn;
 }
+
+.alert-close-btn img {
+  height: 100%;
+}
+
+/* .light-alert-cross {
+  transform: scale(2);
+} */
 
 /* Show course */
 
@@ -654,6 +709,16 @@ img {
   margin-bottom: 0.5rem;
   opacity: 0.8;
   font-size: 0.89rem;
+  list-style: none;
+}
+
+.show-course-card li img {
+  height: 5%;
+  width: 5%;
+
+  aspect-ratio: 1;
+  object-fit: contain;
+  object-position: center;
 }
 
 .show-course-card .social-options {
@@ -945,9 +1010,9 @@ img {
   align-items: center;
 }
 
-.err-message {
+/* .err-message {
   font-size: 2.5rem;
-}
+} */
 
 .err-code {
   font-size: 1.5rem;
