--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -6,7 +6,11 @@
     <title>Future &dash; Academy | Future of Learning</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/rating.css" />
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/assets/l-favicon.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <%- include('../includes/navbar.ejs') %>
