--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
   <div class="teacher-baner banner">
     <div class="teacher-baner-txt">
       <h3>Teach the world online</h3>
@@ -49,4 +49,4 @@
     <img src="/assets/dark-brand-logo.svg" alt="" />
     <h2>Future Academy</h2>
   </div>
-</div>
+</footer>
