--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,9 +15,9 @@
   <body>
     <%- include('../includes/navbar.ejs') %>
 
-    <div class="container">
+    <main class="container">
       <%- include('../includes/flash.ejs') %> <%- body %>
-    </div>
+    </main>
 
     <%- include('../includes/footer.ejs') %>
     <script src="/js/script.js"></script>
